WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126138
[GTK][WK2] WebGL is not working with GLES
https://bugs.webkit.org/show_bug.cgi?id=126138
Summary
[GTK][WK2] WebGL is not working with GLES
ChangSeok Oh
Reported
2013-12-22 11:04:19 PST
Just run
http://learningwebgl.com/lessons/lesson01
Attachments
Patch
(5.23 KB, patch)
2013-12-22 12:23 PST
,
ChangSeok Oh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
ChangSeok Oh
Comment 1
2013-12-22 12:23:32 PST
Created
attachment 219881
[details]
Patch
WebKit Commit Bot
Comment 2
2013-12-22 12:24:10 PST
Attachment 219881
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/cairo/GraphicsContext3DCairo.cpp', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:128: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:135: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:136: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:136: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:127: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:134: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:135: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:135: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 8 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
ChangSeok Oh
Comment 3
2013-12-22 12:33:01 PST
(In reply to
comment #2
)
>
Attachment 219881
[details]
did not pass style-queue: > > Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/cairo/GraphicsContext3DCairo.cpp', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp', u'Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp', '--commit-queue']" exit_code: 1 > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:128: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:135: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:136: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGL.cpp:136: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:127: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:134: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:135: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > ERROR: Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLES.cpp:135: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] > Total errors found: 8 in 4 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
False positives, sigh..
ChangSeok Oh
Comment 4
2013-12-23 01:47:16 PST
Comment on
attachment 219881
[details]
Patch Thank you for the review!
WebKit Commit Bot
Comment 5
2013-12-23 02:15:26 PST
Comment on
attachment 219881
[details]
Patch Clearing flags on attachment: 219881 Committed
r160991
: <
http://trac.webkit.org/changeset/160991
>
WebKit Commit Bot
Comment 6
2013-12-23 02:15:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug